Mon Jul 23 16:53:45 UTC 2007  Krishnakumar B  <kitty@nospam.invalid.domain>

        * examples/Hello/descriptors/DeploymentPlan.cdp:  Updated
          deployment plan generated from the corresponding PICML model.

        * examples/Hello/descriptors/DeploymentPlan_without_ns.cdp:  New
          deployment plan which doesn't use the Naming Service.

        * examples/Hello/descriptors/run_test.pl:
        * examples/Hello/descriptors/run_test_without_ns.pl:

          Updated the nightly build script to use the new deployment plans.

Mon Jul 23 09:07:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Cookies.cpp:
          Removed const in cast, not needed and fixes Intel C++
          warning

Fri Jul 20 12:11:43 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/basic_visitor.cpp:
        * tools/IDL3_to_IDL2/basic_visitor.h:
        * tools/IDL3_to_IDL2/be_global.cpp:
        * tools/IDL3_to_IDL2/be_produce.cpp:
        * tools/IDL3_to_IDL2/be_global.h:
        * tools/IDL3_to_IDL2/be_sunsoft.h:
        * tools/IDL3_to_IDL2/be_helper.cpp:
        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp:
        * tools/IDL3_to_IDL2/be_helper.h:

          Refactored code and other changes to make this backend more
          friendly to others that extend it. No changes to generated
          code or to the behavior of the backend.

Thu Jul 19 07:50:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/IDL3_to_IDL2/be_global.{h,cpp}:
          No need to specify "bool const" for a return value, this also
          triggers a warning with the Intel C++ Compiler

Thu Jul 19 00:50:28 UTC 2007  Krishnakumar B  <kitty@nospam.invalid.domain>

        * examples/Hello/Hello_Base/Hello_Base.mpc:
        * examples/Hello/Receiver/Receiver.mpc:
        * examples/Hello/Sender/Sender.mpc:

          Updated to remove traces of _DnC_ from the projects.
